...
                                title: "Eigene Sprüche beitragen",
                                content: "In den Einstellungen findest du die Möglichkeit, dein eigenes lyrisches Meisterwerk in die Schnupfbiblä übertragen zu lassen."),
            
            WelcomeSheetPageRow(imageSystemName: "hand.raised.circle",
                                title: "Schnupftabak ist ein Tabakerzeugnis",
                                content: "Tabak ist ein Suchtmittel und kann abhängig machen. Die Einnahme von Tabakprodukten wird nicht empfohlen. Bitte beachte, dass in bestimmten Regionen Jugendschutzgesetze gelten und das Verkaufs- und Erwerbsalter für Tabakprodukte beschränkt sein könnte.")
        ], mainButtonTitle: "Priis!")
    ]

let SubmissionThankYouPages = [
        WelcomeSheetPage(title: "Danke für deinen Beitrag", rows: [
            WelcomeSheetPageRow(imageSystemName: "checkmark.seal",
                                title: "Vielen dank!",
...
