...
                    Label("", systemImage: "xmark.circle.fill").font(.system(size: 32.0)).foregroundColor(.gray)
                }
            }.padding(12.0)
            
            List {
                Section() {
                    Toggle("Explizite Inhalte erlauben", isOn: $vulgarContentAllowed)
                }
                
                Section(header: Text("LIEBLINGSSPRÜCHE")) {
                    ForEach(firestoreManager.user?.likedSayings ?? [], id: \.self) {saying in
                        
                        Button("\(firestoreManager.titles[saying] ?? saying)") {
...
